--- a/Klapp_Angular/package.json
+++ b/Klapp_Angular/package.json
@@ -25,8 +25,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.5",
+    "chart.js": "^4.4.6",
     "express": "^4.18.2",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
